--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-spring/web": "^9.7.3",
     "@tanstack/react-query": "^5.35.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
